feat: add APIs to create & list workspace credentials
